--- a/Newapp_alish/style.css
+++ b/Newapp_alish/style.css
@@ -9,6 +9,7 @@
 :root
 {
     --bg-color:#ffc0cb;
+    --second-bg-color:gray;
 }
 body{
     overflow: hidden;
@@ -28,7 +29,7 @@ body{
 .bulb{
     width: 80px;
     height: 120px;
-    background-color: gray;
+    background-color: var(--second-bg-color);
     border-radius: 50% 50% 0 0;
     margin-bottom: 20px;
 }
